--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,12 @@ body {
   color: #ff0000 !important;
 }
 
+.important_meta {
+  font-size: 30px;
+  width: 450px;
+  display: block;
+}
+
 .fa {
   margin-right: 40px !important;
 }
@@ -85,7 +91,7 @@ body {
 }
 
 .bottom {
-  position: absolute;
+  position: fixed;
   bottom: 50px;
 }
 
