--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,21 +20,38 @@ body {
 }
 
 .date_only {
-  font-size: 60px;
+  font-size: 50px;
 }
 
 .time_only {
-  font-size: 120px;
-  font-weight: bold;
+  font-size: 150px;
+  /*font-weight: 900;*/
+  line-height: 140px;
 }
 
-.travel_data {
+.current_weather .large_info {
+  font-size: 150px;
+}
+
+.current_weather .wi {
+  font-size: 130px;
+  color: #aaaaaa;
+}
+
+.travel_data{
   margin-top: 150px;
 }
 
-.delay_planned {
+.travel_data td{
+  margin-top: 150px;
   font-size: 40px !important;
+  font-weight: bold;
+  padding: 0;
+}
+
+.travel_data .delay_planned {
   font-style: italic;
+  font-weight: normal;
 }
 
 .important {
@@ -45,10 +62,10 @@ body {
   font-size: 30px;
   width: 450px;
   display: block;
-}
-
-.fa {
-  margin-right: 40px !important;
+  margin-top: -20px;
+  border-left: 3px solid #ff0000;
+  padding-left: 20px;
+  margin-left: 5px;
 }
 
 .top {
@@ -91,7 +108,7 @@ body {
 }
 
 .bottom {
-  position: fixed;
+  position: absolute;
   bottom: 50px;
 }
 
